--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 	            </li>
 
 	            <li>
-	              <a>
-	                <span></span><br class="hidden-xs"><button id="myBtn">Login</button></a>
+	              <a id="login">
+	                <span></span><br class="hidden-xs">Login</a>
 	            </li>
 	        	<li>
-	        	<a href="#">
+	        	<a id="signin">
 	        		<span></span><br class="hidden-xs">Signup</a>
 	        	</li>
 	        </ul>
@@ -51,21 +51,47 @@
 </nav>	
 </header>
 <div id="myModal" class="modal">
-<!--modal content-->
-<div class="modal-content">
-	<div class="modal-header">
-		<span class="close">x</span>
-		<h2>Login Page</h2>
-	</div>
-	<div class="modal-body">
-	Username:<input type="text"><br>
-	<br>
-	Password:<input type="Password" name="Password">
-<br>	</div>
-	<div class="modal-footer">
+	<!--modal content-->
+	<div class="modal-content">
+		<div class="modal-header">
+			<span class="close">x</span>
+			<h2 class="brl">Login Page</h2>
+		</div>
+		<div class="modal-body"><h4 class="spl">
+		Username:<input type="text"><br></h3>
+		<br><h4 class="spl">
+		Password:<input type="Password" name="Password">
+	<br><br></h4>
+		</div>
+		<div class="modal-footer"><div class="buttons">
+		<button method="Post">Login</button>
+		<button method="Reset">Reset</button></div>
+		</div>
 	</div>
 </div>
+<div id="signup" class="modal">
+	<div class="modal-content">
+		<div class="modal-header">
+			<span class="signinclose">x</span>
+			<h2 class="brl">Signin Page</h2>
+		</div>
+		<div class="modal-body"><h4 class="spl">
+		UserName:<input type="text"><br></h3>
+		<br><h4 class="spl">
+		E-mail:<input type="mail" name="mail"><br><br>
+		Password:<input type="Password" name="Password">
+	<br><br>
+	Retype Password:<input type="Password" name="Password">
+	<br><br>
+	
+		</div>
+		<div class="modal-footer"><div class="buttons">
+		<button method="Post">Signin</button>
+		<button type="Reset">Reset</button></div>
+		</div>
+	</div>
 </div>
+
 <div id="body-img">
 	<img src="img/hand.png">
 </div><footer class="panel-footer">
