--- a/index.html
+++ b/index.html
@@ -44,31 +44,33 @@
 	        		<span></span><br class="hidden-xs">Signup</a>
 	        	</li>
 	        </ul>
-	        </div>
+	    </div>
 
-		</div>
 	</div>
 </nav>	
 </header>
-<div id="myModal" class="modal">
-	<!--modal content-->
-	<div class="modal-content">
-		<div class="modal-header">
-			<span class="close">x</span>
-			<h2 class="brl">Login Page</h2>
-		</div>
-		<div class="modal-body"><h4 class="spl">
-		Username:<input type="text"><br></h3>
-		<br><h4 class="spl">
-		Password:<input type="Password" name="Password">
-	<br><br></h4>
-		</div>
-		<div class="modal-footer"><div class="buttons">
-		<button method="Post">Login</button>
-		<button method="Reset">Reset</button></div>
+<form>
+	<div id="myModal" class="modal">
+		<!--modal content-->
+		<div class="modal-content">
+			<div class="modal-header">
+				<span class="close">x</span>
+				<h2 class="brl">Login Page</h2>
+			</div>
+			<div class="modal-body"><h4 class="spl">
+				Username:<input type="text"><br></h4>
+				<br><h4 class="spl">
+				Password:<input type="Password" name="Password">
+			<br><br></h4>
+			</div>
+			<div class="modal-footer"><div class="buttons">
+				<input type="submit" method="Post" value="Login">
+				<input type="reset" value="Reset"></div>
+			</div>
 		</div>
 	</div>
-</div>
+</form>
+<form>
 <div id="signup" class="modal">
 	<div class="modal-content">
 		<div class="modal-header">
@@ -76,25 +78,26 @@
 			<h2 class="brl">Signin Page</h2>
 		</div>
 		<div class="modal-body"><h4 class="spl">
-		UserName:<input type="text"><br></h3>
-		<br><h4 class="spl">
-		E-mail:<input type="mail" name="mail"><br><br>
-		Password:<input type="Password" name="Password">
-	<br><br>
-	Retype Password:<input type="Password" name="Password">
-	<br><br>
-	
+			UserName:<input type="text"><br></h4>
+			<br><h4 class="spl">
+			E-mail:<input type="mail" name="mail"><br><br>
+			Password:<input type="Password" name="Password">
+			<br><br>
+			Retype Password:<input type="Password" name="Password">
+			<br><br>
+			</h4>
 		</div>
 		<div class="modal-footer"><div class="buttons">
-		<button method="Post">Signin</button>
-		<button type="Reset">Reset</button></div>
+			<input type="Submit" method="Post" value="SignIn">
+			<input type="Reset"></div>
 		</div>
 	</div>
 </div>
-
-<div id="body-img">
-	<img src="img/hand.png">
-</div><footer class="panel-footer">
+</form>
+	<div id="body-img">
+		<img src="img/hand.png">
+	</div>
+<footer class="panel-footer">
 	<div class="container">
 		<div class="row">
 			<section id="Terms" class="col-sm-4">
@@ -102,12 +105,12 @@
 			</section>
 			<hr class="visible-xs">
 			<section id="aboutus" class="col-sm-4">
-			<span><a>About us</a></span>
-			<hr class="visible-xs">
+				<span><a>About us</a></span>
+				<hr class="visible-xs">
 			</section>
 			<section id="learn" class="col-sm-4">
 				<span><a>Learn</a></span>
-			<hr class="visible-xs">
+				<hr class="visible-xs">
 			</section>
 		</div>
 	</div>
