--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
 	<div class="parallax3"><div class="content"><a href="#">Java</a></div>
 	</div>
 	
-	<div class="parallax4"><div class="content" ><a href="#" style="color:black">DataStructures</a></div>
+	<div class="parallax4"><div class="content" ><a href="#" style="color:black" style="font-size:10em " >Data Structures</a></div>
 	</div>
 <footer class="panel-footer">
 	<div class="container">
