--- a/login.html
+++ b/login.html
@@ -21,32 +21,14 @@
 	          <div class="navbar-brand">
 	            <a href="index.html"><h1>Testers Spot</h1></a>
 	          </div>
-	           <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-	            <span class="sr-only">Toggle navigation</span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	          </button>
-	        </div>
-	        <div id="collapsable-nav" class="collapse navbar-collapse">
-	           <ul id="nav-list" class="nav navbar-nav navbar-right">
-		            <li id="navHomeButton" class="visible-xs active">
-		              <a href="index.html">
-		                <span></span> Home</a>
-		            </li>
-
-		            <li>
-		              <a id="login">
-		                <span></span><br class="hidden-xs">Login</a>
-		            </li>
-		        	<li>
-		        	<a id="signin">
-		        		<span></span><br class="hidden-xs">Signup</a>
-		        	</li>
-		        </ul>
-		    </div>
-
+	           
+			</div>
+			<div class="chip">
+  			<img src="img/img_avatar.png" alt="Person" width="96" height="96">
+  			Bhuvaneshwar
 		</div>
+
+
 	</nav>	
 </header>
 
