--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
 	           
 			</div>
 			<div class="chip">
-  			<img src="img/img_avatar.png" alt="Person" width="96" height="96">
+  			<img alt="Person" width="96" height="96">
   			Bhuvaneshwar
 		</div>
 
